--- a/site/layouts/shortcodes/tovuti/global/lessonActivity-event.html
+++ b/site/layouts/shortcodes/tovuti/global/lessonActivity-event.html
@@ -1,18 +1,18 @@
-<div class="tovAx__componentQuery__container d-flex flex-column h-100 w-100 gap-4">
-  <div class="w-100 p-0 rounded"
-    style="background-image: url('/docs/5.2/assets/img/placeholder_component.svg');  width: 100%; height:96px;  background-position: 50% 44%; background-size: fill; background-attachment: fixed;">
+<div class="tovAx__componentQuery__container d-flex flex-column w-100 gap-1" style="touch-action: none; box-sizing: border-box;">
+  <div class="w-100 p-0 rounded funkPlaceholder"
+    style="width: 100%; height:96px;">Application Topbar
   </div>
-  <div class="d-flex flex-row w-100 gap-4">
+  <div class="d-flex flex-row w-100 gap-1">
     <div class="dragTovAxSideNavWrapper rounded mh-100"
-      style="background-image: url('/docs/5.2/assets/img/placeholder_component.svg'); background-attachment: fixed; width: 220px;">
-      <div class="dragTovAxSideNav rounded h-100 mw-100"></div>
+      style="width: 220px;">
+      <div class="dragTovAxSideNav rounded h-100 mw-100 funkPlaceholder">Learner Experience Aside Navigation + This is Draggable</div>
     </div>
-    <div class="d-flex flex-sm-row-reverse flex-lg-row flex-wrap align-items-top gap-4">
-      <div class="w-100 p-0 rounded"
-        style="background-image: url('/docs/5.2/assets/img/placeholder_component.svg'); width: 100%; height:96px;  background-position: 50% 44%; background-size: fill; background-attachment: fixed;">
+    <div class="d-flex flex-sm-row-reverse flex-lg-row flex-wrap align-items-top gap-1">
+      <div class="w-100 p-0 rounded funkPlaceholder" style="height:96px;">
+        Lesson Header Image + Details
       </div>
       <div class="col-12 col-md-8 flex-fill position-relative">
-        <div class="position-absolute top-0 translate-middle btn-group gap-2 w-auto" role="group"
+        <div class="position-absolute top-0 translate-middle btn-group gap-1 w-auto" role="group"
           aria-label="Horizontal radio toggle button group justify-content-end"
           style="z-index:10; left: auto; right: -100px;">
           <input type="radio" class="btn-check" name="vbtn-radio1" id="vbtn-radio1" autocomplete="off" checked>
@@ -25,7 +25,7 @@
         <div class="tov-lessonActivity-event border rounded shadow-sm overflow-hidden">
           <div class="card border-0">
             <div class="row g-0">
-              <div class="tov-lessonActivity-event_coverImage w-100 border border-0 position-relative">
+              <div class="tov-lessonActivity-event_coverImage w-100 funkPlaceholder position-relative">
 EVENT COVER IMAGE
               </div>
               <div class=" col-12 col-lg-9 flex-fill p-0">
@@ -148,10 +148,10 @@ EVENT COVER IMAGE
         </div>
       </div>
       <div class="w-auto flex-grow-1">
-        <div class="tovAx__lesson--nextLessonCard-container position-sticky d-flex flex-fill flex-column p-0 gap-3">
-          <div class="tovAx__lesson--nextLessonCard d-flex flex-fill bg-light flex-column p-0 rounded shadow-sm">
+        <div class="tovAx__lesson--nextLessonCard-container position-sticky d-flex flex-fill flex-column p-0 gap-1">
+          <div class="tovAx__lesson--nextLessonCard d-flex flex-fill funkPlaceholder flex-column p-0 rounded">Up Next Module
           </div>
-          <div class="tovAx__lesson--nextLessonCard d-flex flex-fill bg-light flex-column p-0 rounded shadow-sm">
+          <div class="tovAx__lesson--nextLessonCard d-flex flex-fill funkPlaceholder flex-column p-0 rounded">Lesson Material Module
           </div>
         </div>
       </div>
@@ -160,37 +160,34 @@ EVENT COVER IMAGE
   </div>
   <!-- END COMPONENT QUERY CONTAINER DIRECTLY AFTER THIS-->
 </div>
-<hr class="my-3 w-100 h-100">
-<div class="tovAi-shell-container d-flex flex-column w-100 gap-3 w-100">
-  <div class="w-100 p-0 rounded"
-    style="background-image: url('/docs/5.2/assets/img/placeholder_component.svg');  width: 100%; height:96px;  background-position: 50% 44%; background-size: fill; background-attachment: fixed;">
+<hr class="my-3 w-100">
+<div class="tovAi-shell-container d-flex flex-column w-100 gap-1 w-100">
+  <div class="w-100 p-0 rounded funkPlaceholder" style="width: 100%; height:96px;">Application Topbar
   </div>
   <div class="d-flex flex-row flex-wrap w-100 p-0 rounded">
-    <div class="d-flex flex-row w-100 gap-3">
-      <div class=" d-flex flex-row h-100 w-25 p-0 gap-3 rounded">
-        <div class="w-25 h-100 rounded"
-          style="background-image: url('/docs/5.2/assets/img/placeholder_component.svg');  width: 100%; height:96px;  background-position: 50% 44%; background-size: fill; background-attachment: fixed;">
+    <div class="d-flex flex-row w-100 gap-1">
+      <div class=" d-flex flex-row h-100 w-25 p-0 gap-1 rounded">
+        <div class="w-25 h-100 rounded funkPlaceholder"
+          style="width: 100%; height:96px;">
         </div>
-        <div class="w-75 h-100 rounded"
-          style="background-image: url('/docs/5.2/assets/img/placeholder_component.svg');  width: 100%; height:96px;  background-position: 50% 44%; background-size: fill; background-attachment: fixed;">
+        <div class="w-75 h-100 rounded funkPlaceholder">
+          Level 2 navigation
         </div>
       </div>
-      <div class="d-flex flex-column w-75 p-0 gap-3 rounded">
+      <div class="d-flex flex-column w-75 p-0 gap-1 rounded">
         <div class="d-flex flex-column w-100 p-0 gap-1 rounded">
-          <div class="w-100 rounded"
-            style="background-image: url('/docs/5.2/assets/img/placeholder_component.svg');  width: 100%; height:40px;  background-position: 50% 44%; background-size: fill; background-attachment: fixed;">
+          <div class="w-100 rounded funkPlaceholder"
+            style="width: 100%; height:40px;">Title Bar
           </div>
-          <div class="w-100 rounded"
-            style="background-image: url('/docs/5.2/assets/img/placeholder_component.svg');  width: 100%; height:40px;  background-position: 50% 44%; background-size: fill; background-attachment: fixed;">
+          <div class="w-100 rounded funkPlaceholder" style="height: 40px;">
+            Action Bar
           </div>
-          <div class="w-100 rounded"
-            style="background-image: url('/docs/5.2/assets/img/placeholder_component.svg');  width: 100%; height:40px;  background-position: 50% 44%; background-size: fill; background-attachment: fixed;">
+          <div class="w-100 rounded funkPlaceholder" style="height: 40px;">
+            Tab Bar
           </div>
         </div>
-        <div class="w-100">
-
-          <div class="d-flex flex-column bg-white 0  rounded border w-100 h-100">
-
+        <div class="w-100 text-start">
+          <div class="d-flex flex-column bg-white rounded border w-100 h-100">
             <div class="d-flex flex-row border-bottom w-100 h-100">
               <div class="d-flex flex-column flex-fill gap-3 p-4 border-end">
                 <div class="">
