--- a/site/layouts/shortcodes/example.html
+++ b/site/layouts/shortcodes/example.html
@@ -20,18 +20,21 @@
 {{- $content := .Inner -}}
 
 
-<div x-data="{ open: false }" :class="open ? 'expand' : ''" class="p-3 mt-5 align-items-middle bd-example-snippet bd-code-snippet" style="touch-action: none; box-sizing: border-box;">
-  <div class="tovAxExampleExpanded d-flex justify-content-center p-0 mb-3 rounded-3 mx-n1"><button x-on:click="open = ! open" class="btn btn-sm btn-bd-primary d-flex justify-content-center align-items-center p-0 lh-0" style="width:48px; height: 48px;"><i class="fa-solid fa-expand"></i></button></div>
+<div x-data="{ open: false }" :class="open ? 'expand' : ''" class="bg-white ps-auto pe-3 p-3 mt-5 align-items-middle bd-example-snippet bd-code-snippet" style="touch-action: none; box-sizing: border-box;">
+ <div class="tovAxExampleExpanded d-flex justify-content-center p-0 mb-3 rounded-3 mx-n1"><button x-on:click="open = ! open" class="btn btn-sm btn-bd-primary d-flex justify-content-center align-items-center p-0 lh-0" style="width:48px; height: 48px;"><i class="fa-solid fa-expand"></i></button></div>
   {{- if eq $show_preview true -}}
-  <div{{ with $id }} id="{{ . }}"{{ end }} class="responsive-container bg-light XS SM MD LG XL tov-test resizable p-3 m-0 h-auto bd-example{{ with $class }} {{ . }}{{ end }}" style="touch-action: none; box-sizing: border-box;" data-observe-resizes>
 
+  <div{{ with $id }} id="{{ . }}"{{ end }} class="d-flex w-auto justify-content-center bd-example{{ with $class }} {{ . }}{{ end }}" style="touch-action: none; box-sizing: border-box;">
+    <div class="funkCustomExperienceWrapper responsive-container bg-light XS SM MD LG XL tov-test resizable p-1 m-0 h-auto"  style="touch-action: none; box-sizing: border-box;" data-observe-resizes>
     {{- $input -}}
+  </div>
 </div>
 {{- end -}}
 
+<div class="w-100">
   {{- if eq $show_markup true -}}
     {{- if eq $show_preview true -}}
-      <div class="d-flex align-items-center w-100 highlight-toolbar py-2">
+      <div class="d-flex align-items-center highlight-toolbar py-2">
         <small class="font-monospace text-muted text-uppercase pt-3">{{- $lang -}}</small>
       </div>
 
@@ -41,7 +44,9 @@
     {{- $content = replaceRE `<svg class="bd-placeholder-img(?:-lg)?(?: *?bd-placeholder-img-lg)? ?(.*?)".*?<\/svg>` `<img src="..." class="$1" alt="...">` $content -}}
     {{- $content = replaceRE `<img class="bd-placeholder-img(?:-lg)?(?: *?bd-placeholder-img-lg)? ?(.*?)".*?>` `<img src="..." class="$1" alt="...">` $content -}}
     {{- $content = replaceRE ` (class=" *?")` "" $content -}}
-    {{- highlight (trim $content "\n") $lang "" -}}
+
+  {{- highlight (trim $content "\n") $lang "" -}}
+</div>
   {{- end -}}
 
 </div>
