--- a/site/layouts/shortcodes/tovuti/lx/lesson/activity/events.html
+++ b/site/layouts/shortcodes/tovuti/lx/lesson/activity/events.html
@@ -1,11 +1,11 @@
-<div class="tovAx__componentQuery__container d-flex flex-column w-100 gap-1" style="touch-action: none; box-sizing: border-box;">
-  <div class="w-100 p-0 rounded funkPlaceholder"
-    style="width: 100%; height:96px;">Application Topbar
+<div class="tovAx__componentQuery__container d-flex flex-column w-100 gap-1"
+  style="touch-action: none; box-sizing: border-box;">
+  <div class="w-100 p-0 rounded funkPlaceholder" style="width: 100%; height:96px;">Application Topbar
   </div>
   <div class="d-flex flex-row w-100 gap-1">
-    <div class="dragTovAxSideNavWrapper rounded mh-100"
-      style="width: 220px;">
-      <div class="dragTovAxSideNav rounded h-100 mw-100 funkPlaceholder">Learner Experience Aside Navigation + This is Draggable</div>
+    <div class="dragTovAxSideNavWrapper rounded mh-100" style="width: 220px;">
+      <div class="dragTovAxSideNav rounded h-100 mw-100 funkPlaceholder">Learner Experience Aside Navigation + This is
+        Draggable</div>
     </div>
     <div class="d-flex flex-sm-row-reverse flex-lg-row flex-wrap align-items-top gap-1">
       <div class="w-100 p-0 rounded funkPlaceholder" style="height:96px;">
@@ -26,7 +26,7 @@
           <div class="card border-0">
             <div class="row g-0">
               <div class="tov-lessonActivity-event_coverImage w-100 funkPlaceholder position-relative">
-EVENT COVER IMAGE
+                EVENT COVER IMAGE
               </div>
               <div class=" col-12 col-lg-9 flex-fill p-0">
                 <div class="card-body p-0">
@@ -37,6 +37,7 @@ EVENT COVER IMAGE
                         class="isEditable"></span></p>
                   </div>
                   <div class="hstack flex-wrap gap-1 p-3 w-100 border-top">
+                    <!------------- START - Single Date ------------->
                     <div class="d-flex flex-wrap" x-data="{ value: ['11/09/2022'],
                               init() {
                                   let picker = flatpickr(this.$refs.picker, {
@@ -49,6 +50,8 @@ EVENT COVER IMAGE
                           class="fw-bold fst-normal me-1">$date:</em></p>
                       <input class="border-0 ps-0 w-auto" x-ref="picker" type="text">
                     </div>
+                    <!------------- END - Single Date ------------->
+                    <!------------- START - Date Span ------------->
                     <div class="d-flex flex-wrap w-100 justify-content-start" x-data="{ value: ['11/09/2022', ' 11/27/2022'],
                               init() {
                                   let picker = flatpickr(this.$refs.picker, {
@@ -62,42 +65,61 @@ EVENT COVER IMAGE
                           class="fw-bold fst-normal me-1">$dateRange:</em></p>
                       <input class="border-0 ps-0 w-auto align-item-start" x-ref="picker" type="text">
                     </div>
+                    <!------------- END - Date Span ------------->
+                    <!------------- START - Price ------------->
                     <p
                       class="d-flex flex-wrap w-100 justify-content-start align-items-center ps-2 py-2 my-0 gap-0 text-start">
                       <i class="fa fa-circle-dollar me-2"></i><em class="fw-bold fst-normal me-1">Price/per
                         registrant:</em>$price
                     </p>
+                    <!------------- END - Price ------------->
+                    <!------------- START - Event Start Time ------------->
                     <p class="ps-2 py-2 my-0 text-start w-100"><i class="fa fa-clock me-2"></i><em
                         class="fw-bold fst-normal me-1 w-100">Start time:</em>$time $anteMeridiem, $timeZone</p>
+                    <!------------- END - Event Start Time ------------->
+                    <!------------- START - Event End Time ------------->
                     <p class="ps-2 py-2 my-0 text-start w-100"><i class="fa fa-alarm-clock me-2"></i><em
                         class="fw-bold fst-normal me-1">End time:</em>$time $anteMeridiem, $timeZone</p>
+                    <!------------- END - Event End Time ------------->
+                    <!------------- START - On-location Directions  ------------->
                     <p class="ps-2 py-2 my-0 text-start"><i class="fa fa-map me-2"></i><em
                         class="fw-bold fst-normal me-1">Where:</em><a href="">Get Directions to this Event</a></p>
+                    <!------------- END - On-location Directions  ------------->
+                    <!------------- START - Microsoft Teams Virtual Meeting ------------->
                     <button type="button"
                       class="d-flex flex-wrap justify-content-start align-items-center gap-2 btn btn-link ps-2 py-2 w-100 text-start fw-semibold"><img
                         src="/docs/5.2/assets/img/tovuti/logos/teams.svg" alt=""
                         class="object-fit-cover img-fluid text-decoration-none" style="height: 16px;">Join with
                       Microsoft
                       Teams</button>
+                    <!------------- END - Microsoft Teams Virtual Meeting ------------->
+                    <!------------- START - Google Meet Virtual Meeting ------------->
                     <button type="button"
                       class="d-flex flex-wrap justify-content-start align-items-center gap-2 btn btn-link ps-2 py-2 w-100 text-start fw-semibold"><img
                         src="/docs/5.2/assets/img/tovuti/logos/g-meet.svg" alt=""
                         class="object-fit-cover img-fluid text-decoration-none" style="height: 16px;">Join with Google
                       Meet</button>
+                    <!------------- END - Google Meet Virtual Meeting ------------->
+                    <!------------- START - Classroom Virtual Meeting ------------->
                     <p
                       class="d-flex flex-wrap justify-content-start align-items-center gap-2 btn btn-link ps-2 py-2 w-100 text-start text-decoration-none fw-semibold">
                       <i class="fa fa-circle-video"></i><span class="text-decoration-underline">Join Virtual
                         Classroom</span>
                     </p>
+                    <!------------- END - Classroom Virtual Meeting ------------->
                   </div>
                   <div
                     class="vstack bg-light flex-wrap gap-2 p-3 w-100 border-top align-items-bottom justify-content-start h-100">
+                    <!------------- START - Register for Event ------------->
                     <button type="button"
                       class="btn btn-primary text-decoration-none d-flex flex-fill gap-2 justify-content-center align-items-center"><i
                         class="fa fa-right-to-bracket"></i>Register for this Event</button>
+                    <!------------- END - Register for Event ------------->
+                    <!------------- START - See more Details on Event ------------->
                     <button type="button"
                       class="btn btn-brand-white border text-black text-decoration-none d-flex gap-2 justify-content-center align-items-center ps-2"><i
                         class="fa fa-arrow-right"></i>More Details</button>
+                    <!------------- END - See more Details on Event ------------->
                   </div>
                   <div
                     class="vstack bg-light flex-wrap gap-2 p-3 w-100 border-top align-items-bottom justify-content-between h-100">
@@ -127,8 +149,7 @@ EVENT COVER IMAGE
                       class="btn btn-light text-black text-decoration-none d-flex gap-2 justify-content-center align-items-center"><i
                         class="fa fa-arrow-right"></i>More Details</button>
                   </div>
-                  <div
-                    class="calContainer hstack flex-wrap gap-1 px-2 py-3 w-100 border-top justify-content-evenly">
+                  <div class="calContainer hstack flex-wrap gap-1 px-2 py-3 w-100 border-top justify-content-evenly">
                     <span class="w-100 mb-2 text-center">Add this to your calendar</span>
                     <div class="hstack flex-wrap w-100 gap-2 justify-content-center text-center"><a href="#"
                         data-type="google"><img src="/docs/5.2/assets/img/tovuti/calendar/calendar_google.svg" alt=""
@@ -149,54 +170,54 @@ EVENT COVER IMAGE
       </div>
       <div class="w-auto flex-grow-1">
         <div class="tovAx__lesson--nextLessonCard-container position-sticky d-flex flex-fill flex-column p-0 gap-1">
-          <div class="tovAx__lesson--nextLessonCard d-flex flex-fill funkPlaceholder flex-column p-0 rounded">Up Next Module
+          <div class="tovAx__lesson--nextLessonCard d-flex flex-fill funkPlaceholder flex-column p-0 rounded">Up Next
+            Module
           </div>
-          <div class="tovAx__lesson--nextLessonCard d-flex flex-fill funkPlaceholder flex-column p-0 rounded">Lesson Material Module
+          <div class="tovAx__lesson--nextLessonCard d-flex flex-fill funkPlaceholder flex-column p-0 rounded">Lesson
+            Material Module
           </div>
         </div>
       </div>
     </div>
-    <!-- END COMPONENT QUERY WRAPPER DIRECTLY AFTER THIS-->
   </div>
-  <!-- END COMPONENT QUERY CONTAINER DIRECTLY AFTER THIS-->
 </div>
 
-  {{ define "lessonActivity-event" }}
+{{ define "lessonActivity-event" }}
 
-  {{ $event := .Get "event" }}
+{{ $event := .Get "event" }}
 
-  {{ $lesson := .Get "lesson" }}
+{{ $lesson := .Get "lesson" }}
 
-  {{ $activity := .Get "activity" }}
+{{ $activity := .Get "activity" }}
 
-  {{ $eventID := $event.ID }}
+{{ $eventID := $event.ID }}
 
-  {{ $lessonID := $lesson.ID }}
+{{ $lessonID := $lesson.ID }}
 
-  {{ $activityID := $activity.ID }}
+{{ $activityID := $activity.ID }}
 
-  {{ $eventTitle := $event.Title }}
+{{ $eventTitle := $event.Title }}
 
-  {{ $lessonTitle := $lesson.Title }}
+{{ $lessonTitle := $lesson.Title }}
 
-  {{ $activityTitle := $activity.Title }}
+{{ $activityTitle := $activity.Title }}
 
-  {{ $eventURL := $event.URL }}
+{{ $eventURL := $event.URL }}
 
-  {{ $lessonURL := $lesson.URL }}
+{{ $lessonURL := $lesson.URL }}
 
-  {{ $activityURL := $activity.URL }}
+{{ $activityURL := $activity.URL }}
 
-  {{ $eventDate := $event.Date }}
+{{ $eventDate := $event.Date }}
 
-  {{ $lessonDate := $lesson.Date }}
+{{ $lessonDate := $lesson.Date }}
 
-  {{ $activityDate := $activity.Date }}
+{{ $activityDate := $activity.Date }}
 
-  {{ $eventDateFormatted := $event.Date.Format "2006-01-02" }}
+{{ $eventDateFormatted := $event.Date.Format "2006-01-02" }}
 
-  {{ $lessonDateFormatted := $lesson.Date.Format "2006-01-02" }}
+{{ $lessonDateFormatted := $lesson.Date.Format "2006-01-02" }}
 
-  {{ $activityDateFormatted := $activity.Date.Format "2006-01-02" }}
+{{ $activityDateFormatted := $activity.Date.Format "2006-01-02" }}
 
-  {{ end }}
+{{ end }}
