--- a/site/layouts/shortcodes/tovuti/lx/lesson/activity/event-example-3.html
+++ b/site/layouts/shortcodes/tovuti/lx/lesson/activity/event-example-3.html
@@ -15,7 +15,7 @@
         <div class="position-absolute top-0 translate-middle btn-group gap-1 w-auto" role="group"
           aria-label="Horizontal radio toggle button group justify-content-end"
           style="z-index:10; left: auto; right: -100px;">
-          <input type="radio" class="btn-check" name="vbtn-radio1" id="vbtn-radio1" autocomplete="off" checked>
+          <input type="radio" class="btn-check" name="vbtn-radio1" id="vbtn-radio1" autocomplete="off" disabled>
           <label class="btn d-inline-flex align-items-center bg-danger rounded-pill text-light border-0"
             for="vbtn-radio1"><i class="fa fa-circle-xmark me-2"></i>Required</label>
           <input type="radio" class="btn-check" name="vbtn-radio2" id="vbtn-radio2" autocomplete="off">
@@ -25,7 +25,7 @@
         <div class="tov-lessonActivity-event border rounded shadow-sm overflow-hidden">
           <div class="card border-0">
             <div class="row g-0">
-              <div class="tov-lessonActivity-event_coverImage w-100 funkPlaceholder position-relative"  style="background-image: url(../../../../../../static/docs/5.2/assets/img/tovuti/space2.jpg);">
+              <div class="tov-lessonActivity-event_coverImage w-100 funkPlaceholder position-relative">
                 EVENT COVER IMAGE
               </div>
               <div class=" col-12 col-lg-9 flex-fill p-0">
@@ -37,6 +37,7 @@
                         class="isEditable"></span></p>
                   </div>
                   <div class="hstack flex-wrap gap-1 p-3 w-100 border-top">
+                    <!------------- START - Single Date ------------->
                     <div class="d-flex flex-wrap" x-data="{ value: ['11/09/2022'],
                               init() {
                                   let picker = flatpickr(this.$refs.picker, {
@@ -49,26 +50,51 @@
                           class="fw-bold fst-normal me-1">$date:</em></p>
                       <input class="border-0 ps-0 w-auto" x-ref="picker" type="text">
                     </div>
+                    <!------------- END - Single Date ------------->
+                    <!------------- START - Price ------------->
                     <p
                       class="d-flex flex-wrap w-100 justify-content-start align-items-center ps-2 py-2 my-0 gap-0 text-start">
                       <i class="fa fa-circle-dollar me-2"></i><em class="fw-bold fst-normal me-1">Price/per
-                        registrant:</em>$199.99
+                        registrant:</em>$price
                     </p>
+                    <!------------- END - Price ------------->
+                    <!------------- START - Event Start Time ------------->
                     <p class="ps-2 py-2 my-0 text-start w-100"><i class="fa fa-clock me-2"></i><em
                         class="fw-bold fst-normal me-1 w-100">Start time:</em>$time $anteMeridiem, $timeZone</p>
+                    <!------------- END - Event Start Time ------------->
+                    <!------------- START - Event End Time ------------->
                     <p class="ps-2 py-2 my-0 text-start w-100"><i class="fa fa-alarm-clock me-2"></i><em
                         class="fw-bold fst-normal me-1">End time:</em>$time $anteMeridiem, $timeZone</p>
-                    <p class="ps-2 py-2 my-0 text-start"><i class="fa fa-map me-2"></i><em
-                        class="fw-bold fst-normal me-1">Where:</em><a href="">Get Directions to this Event</a></p>
+                    <!------------- END - Event End Time ------------->
+                    <!------------- START - Classroom Virtual Meeting ------------->
+                    <p
+                      class="d-flex flex-wrap justify-content-start align-items-center gap-2 btn btn-link ps-2 py-2 w-100 text-start text-decoration-none fw-semibold">
+                      <i class="fa fa-circle-video"></i><span class="text-decoration-underline">Join Virtual
+                        Classroom</span>
+                    </p>
+                    <!------------- END - Classroom Virtual Meeting ------------->
                   </div>
                   <div
-                    class="vstack bg-light flex-wrap gap-2 p-3 w-100 border-top align-items-bottom justify-content-start h-100">
+                    class="vstack bg-success flex-wrap gap-3 p-3 w-100 border-top align-items-bottom justify-content-between h-100">
+                    <span
+                      class="text-decoration-none d-flex flex-wrap gap-2 text-light justify-content-center align-items-center "><i
+                        class="fa-solid fa-check"></i>You're Registered for this Event!</span>
                     <button type="button"
-                      class="btn btn-primary text-decoration-none d-flex flex-fill gap-2 justify-content-center align-items-center"><i
-                        class="fa fa-right-to-bracket"></i>Register for this Event</button>
-                    <button type="button"
-                      class="btn btn-brand-white border text-black text-decoration-none d-flex gap-2 justify-content-center align-items-center ps-2"><i
+                      class="btn btn-light text-black text-decoration-none d-flex gap-2 justify-content-center align-items-center"><i
                         class="fa fa-arrow-right"></i>More Details</button>
+                  </div>
+                  <div class="calContainer hstack flex-wrap gap-1 px-2 py-3 w-100 border-top justify-content-evenly">
+                    <span class="w-100 mb-2 text-center">Add this to your calendar</span>
+                    <div class="hstack flex-wrap w-100 gap-2 justify-content-center text-center"><a href="#"
+                        data-type="google"><img src="/docs/5.2/assets/img/tovuti/calendar/calendar_google.svg" alt=""
+                          class="w-auto" style="height:32px;" data-type="google"></a>
+                      <div class="vr"></div><a href="#" data-type="ics"><img
+                          src="/docs/5.2/assets/img/tovuti/calendar/calendar_iCloud.svg" alt="" class="w-auto"
+                          style="height:32px;"></a>
+                      <div class="vr"></div><a href="#" data-type="yahoo"><img
+                          src="/docs/5.2/assets/img/tovuti/calendar/calendar_yahoo.svg" alt="" class="w-auto"
+                          style="height:32px;"></a>
+                    </div>
                   </div>
                 </div>
               </div>
