--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -24,6 +24,7 @@
 // Components
 @import "mixins/alert";
 @import "mixins/backdrop";
+@import "mixins/badge";
 @import "mixins/buttons";
 @import "mixins/caret";
 @import "mixins/pagination";
