--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -46,6 +46,7 @@ $yellow:  #ffc107 !default;
 $green:   #198754 !default;
 $teal:    #20c997 !default;
 $cyan:    #0dcaf0 !default;
+$cta:     #007287 !default;
 $tov-blue: #1e2935 !default;
 $tov-light-blue: #374151 !default;
 $tov-white: #ffffff !default;
@@ -67,6 +68,7 @@ $colors: (
   "white":      $white,
   "gray":       $gray-600,
   "gray-dark":  $gray-800,
+  "cta":  $cta,
   "tov-blue":   $tov-blue,
   "tov-light-blue": $tov-light-blue,
   "tov-white": $tov-white
@@ -182,6 +184,16 @@ $cyan-700: shade-color($cyan, 40%) !default;
 $cyan-800: shade-color($cyan, 60%) !default;
 $cyan-900: shade-color($cyan, 80%) !default;
 
+// fusv-disable
+$cta-100: tint-color($cta, 80%) !default;
+$cta-200: tint-color($cta, 60%) !default;
+$cta-300: tint-color($cta, 40%) !default;
+$cta-400: tint-color($cta, 20%) !default;
+$cta-500: $cta !default;
+$cta-600: shade-color($cta, 20%) !default;
+$cta-700: shade-color($cta, 40%) !default;
+$cta-800: shade-color($cta, 60%) !default;
+$cta-900: shade-color($cta, 80%) !default;
 
 $tov-blue-100: tint-color($tov-blue, 80%) !default;
 $tov-blue-200: tint-color($tov-blue, 60%) !default;
@@ -348,6 +360,19 @@ $tov-light-blues: (
   "tov-light-blue-800": $tov-light-blue-800,
   "tov-light-blue-900": $tov-light-blue-900
 ) !default;
+
+$ctas: (
+  "cta-100": $cta-100,
+  "cta-200": $cta-200,
+  "cta-300": $cta-300,
+  "cta-400": $cta-400,
+  "cta-500": $cta-500,
+  "cta-600": $cta-600,
+  "cta-700": $cta-700,
+  "cta-800": $cta-800,
+  "cta-900": $cta-900
+) !default;
+
 // fusv-enable
 
 // scss-docs-start theme-color-variables
@@ -359,6 +384,7 @@ $warning:       $yellow !default;
 $danger:        $red !default;
 $light:         $gray-100 !default;
 $dark:          $gray-900 !default;
+$cta:          $cta !default;
 $tov-dark:    $tov-blue !default;
 $tov-light:   $tov-light-blue !default;
 $tov-white:       $tov-white !default;
@@ -374,6 +400,7 @@ $theme-colors: (
   "danger":     $danger,
   "light":      $light,
   "dark":       $dark,
+  "cta":        $cta,
   "brand":      $tov-dark,
   "brand-light": $tov-light,
   "brand-white": $tov-white
